--- a/project.json
+++ b/project.json
@@ -7,6 +7,7 @@
     "OpenEplatform.API": "[1.0.10]",
     "OpenEplatform.External": "[2.2.4]",
     "UiPath.Excel.Activities": "[2.20.2]",
+    "UiPath.Mail.Activities": "[1.22.2]",
     "UiPath.System.Activities": "[24.3.1]",
     "UiPath.Testing.Activities": "[23.10.1]",
     "UiPath.UIAutomation.Activities": "[23.10.12]"
@@ -15,7 +16,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.4.5.0",
-  "projectVersion": "1.6.4",
+  "projectVersion": "1.6.5",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
